cmake_minimum_required(VERSION 3.31)
project(RootUT C)

set(CMAKE_C_STANDARD 11)

add_executable(RootUT
        BasicPrograms/p1.c
        BasicPrograms/p2.c
        BasicPrograms/p3.c
        BasicPrograms/p4.c
        BasicPrograms/p5.c
        BasicPrograms/p6.c
        BasicPrograms/p0.c
        BasicPrograms/p7.c
        BasicPrograms/p8.c
)
